Fix scrollbar behavior on reporting dashboard sidenav

--- a/public/dashboard-styles/_trumps-bootstrap-sidebar.scss
+++ b/public/dashboard-styles/_trumps-bootstrap-sidebar.scss
@@ -6,7 +6,7 @@
 
 		// required to allow scrolling of nav items
 		flex-grow: 1;
-		overflow-y: scroll;
+		overflow-y: auto;
 	}
 	.list-group-item {
 		background: #4c6697;
